fixed header spacing issue for mobile

--- a/css/site.css
+++ b/css/site.css
@@ -35,7 +35,7 @@ header{
  
     background: url(../images/spartan-helmet.png) no-repeat;
     
-    margin-top: 2.9em;
+    margin-top: 2.8em;
     height: 505px;
 }
 
